chore: update maven central plugin to replace the deprecated ossrh repository
update all dependencies
fix deprecation warnings

update version to v7.4.0 to prepare for next release